# dns-cache

./: .gitignore  CMakeLists.txt  Makefile  README.md  demo.cpp  hosts  main.cpp
doc/html/: _d_n_s_cache_8cpp.html  _d_n_s_cache_8h.html  _d_n_s_cache_8h_source.html  _d_n_s_cache__tests_8cpp.html  _d_n_s_cache__tests_8cpp.js  _exception_8h.html  _exception_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  catch_8hpp.html  catch_8hpp.js  catch_8hpp_source.html  class_catch_1_1_assertion_result-members.html  class_catch_1_1_assertion_result.html  class_catch_1_1_between_generator-members.html  class_catch_1_1_between_generator.html  class_catch_1_1_between_generator.js  class_catch_1_1_binary_expression-members.html  class_catch_1_1_binary_expression.html  class_catch_1_1_binary_expression.js  class_catch_1_1_composite_generator-members.html  class_catch_1_1_composite_generator.html  class_catch_1_1_composite_generator.js  class_catch_1_1_detail_1_1_approx-members.html  class_catch_1_1_detail_1_1_approx.html  class_catch_1_1_detail_1_1_approx.js  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_exception_translator_registrar.html  class_catch_1_1_expression_lhs-members.html  class_catch_1_1_expression_lhs.html  class_catch_1_1_expression_lhs.js  class_catch_1_1_internal_1_1_evaluator.html  class_catch_1_1_match_expression-members.html  class_catch_1_1_match_expression.html  class_catch_1_1_match_expression.js  (+299 more)
include/: DNSCache.h  Exception.h  catch.hpp
src/: DNSCache.cpp
tests/: DNSCache_tests.cpp  hosts
(+54 files in other folders)
